Fix T37993: mass of Rigid Body ignores scene unit scale

Mass units weren't scaled in the ui.